[package]
name = "ormigo"
version = "0.1.2"
edition = "2024"
authors = ["Derek Mwale derek.mwale@gmail.com"]
description = "A fluent, async ORM for Rust (SQLite-first)"
repository = "https://github.com/derekmwale/ormigo"
license = "MIT"
keywords = ["orm", "rust", "sqlite", "async"]
categories = ["database", "web-programming", "development-tools"]


[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["sqlite", "macros", "runtime-tokio-native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"